# libembeddings

./: .gitignore  CMakeLists.txt  README.md
config/: cache_cfg.yaml
gpu_cache/include/: nv_gpu_cache.hpp
gpu_cache/src/: CMakeLists.txt  nv_gpu_cache.cu
gpu_cache/test/: CMakeLists.txt  cache_op_sol_test.cu
include/: cache_base.hpp  embedding.hpp  embedding_bag.hpp  file_cache.hpp  gpu_cache.hpp  ps_cache.hpp  type_def.hpp  util.hpp
scripts/: data_utils.py  generate_table.py  trace_generator.py
src/: CMakeLists.txt  cache_base.cpp  embedding.cpp  embedding_bag.cpp  file_cache.cpp  gpu_cache.cpp  ps_cache.cpp
test/: CMakeLists.txt  embedding_test.cpp
